DELPHITWAIN CHANGE LOG
======================
2025/01/08 MaxM - Set CAP_AUTOSCAN/CAP_AUTOFEED Only if FeederEnabled is True
                  Deleted commented oldcode and various other crap;
                  Moved DelphiTwainLang vars to uFormSelectSource_FMX

2024/12/18 MaxM - Moved General Types in DelphiTwainTypes Unit;
	   	  Added GetParamsCapabilities method;
	   	  Added Languages support;
	   	  Some UI adjustments due to the length of Italian Language
        13 MaxM - Added Download method and Download_XXX properties;
	          Modified TransferImages method to handle multiple files scan (Feeder);
		  Commented the Obscure RefreshVirtualWindow method that Destroy all; 

2024/11/06 MaxM - Changed GetTwainDirectory function to tests 32/64 bit dll
        
2024/09/10 MaxM - Added Select and Settings Forms taken from Project DigIt by changing parameters, field names and types          
	   Deleted obsolet uFormSelectSource_VCL and Twain_o;
           Delphi Compatibility for Forms;   

2023/12 MaxM - CapabilityCanGet/Set; GetOneValue overloads; GetIndicators; Get/Set AutoScan;
	     SetFeederEnabled set also AutoScan and AutoFeed;
	     Paper Feeding Get/Set in TTwainPaperFeedingSet; GetOrientation
	     GetEnumerationValue overloads; changed params of GetPaperSizeSet, GetIBitDepth;
	     CreateWindow Delphi compatibility;
             GetRangeValue,GetArrayValue,SetOneValue overload;
             Use of Fix32ToFloat intestead of StrToFloat;
             Use of overloaded methods in code (to remove annoying repetitions)
             RangeCeckError Off in Fix32ToFloat/FloatToFix32
             Delphi compatibility;
             Enum and Array Capabilities always return Current and Default; DuplexEnabled; TwainPixelTypes;
          14 Changed Extended to Single (for platform compatibility and for my actual state);
             Added OnTwainAcquire, rOnAcquireProgress in TCustomDelphiTwain;
             changelog in text file.