@@ -1,5 +1,7 @@
 DELPHITWAIN CHANGE LOG
 ======================
+2025/02/28 MaxM - Added UseRelativePath to Download
+
 2025/01/08 MaxM - Set CAP_AUTOSCAN/CAP_AUTOFEED Only if FeederEnabled is True
                   Deleted commented oldcode and various other crap;
                   Moved DelphiTwainLang vars to uFormSelectSource_FMX
